# HaskellHotApiRedditTelegramBotProject

./: .gitignore  CHANGELOG.md  HaskellHotApiRedditTelegramBotProject.cabal  README.md  cabal.project  package.yaml
app/: Main.hs
hot-reddit/: CHANGELOG.md  HotReddit.cabal  hot-reddit.cabal
hot-reddit/app/: Main.hs
hot-reddit/src/: Lib.hs  RedditJson.hs  RequestLib.hs
src/: BotCore.hs  Common.hs
src/Common/: FlipCoin.hs
